[package]
name = "slice-pool2"
version = "0.4.1"
authors = ["Mason Ginter <mason@dagint.com>", "Elliott Linder <elliott.darfink@gmail.com>"]
description = "A library for using a slice as a memory pool"
documentation = "https://docs.rs/slice-pool"
keywords = ["pool", "slice", "chunk", "memory", "wrap"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hpmason/slice-pool-rs"

[dependencies]
